# tinybird-sdk-python

./: .gitignore  PORT_PARITY_CHECKLIST.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/tinybird_sdk/: __init__.py  _http.py
src/tinybird_sdk/api/: __init__.py  api.py  branches.py  build.py  dashboard.py  deploy.py  fetcher.py  local.py  regions.py  resources.py  tokens.py  workspaces.py
src/tinybird_sdk/cli/: __init__.py  auth.py  branch_store.py  config.py  config_loader.py  config_types.py  env.py  git.py  index.py  output.py  region_selector.py
src/tinybird_sdk/client/: __init__.py  base.py  preview.py  tokens.py  types.py
src/tinybird_sdk/codegen/: __init__.py  index.py  type_mapper.py  utils.py
src/tinybird_sdk/generator/: __init__.py  client.py  connection.py  datasource.py  include_paths.py  index.py  loader.py  pipe.py
src/tinybird_sdk/infer/: __init__.py  index.py
src/tinybird_sdk/migrate/: parse.py  (+9 more)
tests/: test_api_branches_options.py  test_api_core.py  test_api_parity.py  test_cli_branch_config.py  test_cli_config_parity.py  test_cli_entrypoint.py  test_cli_generate.py  test_cli_support.py  test_cli_workflows.py  test_client_parity.py  test_codegen_parity.py  test_dashboard.py  test_fetcher.py  test_generator_parity.py  test_infer_parity.py  test_migrate_parity.py  test_phase1_schema_generator_parity.py  test_phase3_migrate_parser_parity.py  test_phase4_migrate_runner_emitter_parity.py  test_phase6_root_export_contract.py  test_project_parity.py  test_resources_pull_parity.py  test_root_exports.py  test_schema_validations.py
(+35 files in other folders)
