[project]
name = "tinybird-sdk"
version = "0.1.8"
description = "Python SDK for Tinybird Forward"
readme = "README.md"
authors = [
    { name = "Tinybird", email = "support@tinybird.co" }
]
requires-python = ">=3.11"
dependencies = [
    "tinybird==4.5.0",
]

[project.scripts]
tinybird = "tinybird_sdk.cli.index:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
